--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
       <button onclick="seConnecter()">Se connecter</button>
       <p id="erreur" style="color:red;"></p>
     </div>
+<div id="ajoutMaison" style="display:none;">
+  <h2>Ajouter une maison (Chef uniquement)</h2>
+  <input type="text" id="nomMaison" placeholder="Nom de la maison"><br><br>
+  <textarea id="descriptionMaison" placeholder="Description"></textarea><br><br>
+  <select id="regionMaison">
+    <option value="Ville">Ville</option>
+    <option value="Quartier Japonais">Quartier Japonais</option>
+    <option value="Cobble City">Cobble City</option>
+    <option value="Campagne">Campagne</option>
+  </select><br><br>
+  <input type="text" id="prixMaison" placeholder="Prix (séparés par des virgules)"><br><br>
+  <input type="text" id="photoMaison" placeholder="URL de la photo"><br><br>
+  <button onclick="ajouterMaison()">Ajouter la maison</button>
+</div>
 
     <div id="catalogue-section" style="display:none;">
       <div class="filtres">
